--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:bottega-code-school/js-builder.git"
+    "url": "https://github.com/Tyrel-Huseby/tyrel-huseby-react-portfolio.git"
   },
   "keywords": [
     "es6",
